fix alignment issue in footer

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -316,7 +316,7 @@ footer{
     margin: auto;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
 }
 
